[package]
name = "rust-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-once-cell = "0.5.2"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.3.19", features = ["derive"] }
dbp_schema = { git = "https://github.com/exdata-inc/dbp-schema.git", rev = "865b9fb836a518eb0e49502bab5d41e054485421"}
env_logger = "0.10.0"
log = "0.4.20"
once_cell = "1.18.0"
prost = "0.12.1"
prost-helper = "0.7.0"
serde_json = "1.0.104"
sxutil = { git = "https://github.com/exdata-inc/synerex_sxutil/", rev = "2052bb076c13aea67f7de82e2f787ae856da0e14"}
synerex_api = { git = "https://github.com/exdata-inc/synerex_api.git", rev = "1e3c21262c2be12cdaf919f6020a8893b5cb4578"}
synerex_proto = { git = "https://github.com/exdata-inc/synerex_proto.git", rev = "a2cad4f8278c4c5ceb4d73f97fd5e5d5c3ffda82"}
tokio = { version = "1.32.0", features = ["full"] }

[build-dependencies]
prost-serde = "0.3"

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 'z'
lto = true
